tests/error/lambda_mismatch1.gw
#! [contains] argument number does not match for lambda
\a b { <<< a, " ", b >>>; }(1);
